syntax = "proto3";
package strangelove.horcrux;

import "tendermint/privval/types.proto";

option go_package = "github.com/strangelove-ventures/horcrux/signer/proto";

service RemoteSigner {
	rpc PubKey (tendermint.privval.PubKeyRequest) returns (tendermint.privval.PubKeyResponse) {}
	rpc SignVote(tendermint.privval.SignVoteRequest) returns (tendermint.privval.SignedVoteResponse) {}
	rpc SignProposal(tendermint.privval.SignProposalRequest) returns (tendermint.privval.SignedProposalResponse) {}
	rpc Ping(tendermint.privval.PingRequest) returns (tendermint.privval.PingResponse) {}
}
